# pyrs

./: .bumpversion.cfg  .gitignore  README.md  development.txt  pyproject.toml
.github/workflows/: pylint.yml
examples/: instrument.py  measure.py  output.py  source.py
pyrs/: hmp2030.py  power_cli.py
